[tool.poetry]
name = "CryptoBot"
version = "1.1"
description = "goto readme.md"
authors = ["DarkKnot,Slakes(probably the same)"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
cryptocompare = "^0.7.5"
discord = "^1.0.1"
praw = "^7.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
